Show username on header dropdown list

--- a/assets/elm-app/public/index.html
+++ b/assets/elm-app/public/index.html
@@ -21,6 +21,9 @@
         header a {
             color: #fff;
         }
+        header .dropdown-menu {
+            font-size: 14px;
+        }
     </style>
 </head>
 <body style="height: 100%;">
