improve new repo page

--- a/assets/elm-app/public/index.html
+++ b/assets/elm-app/public/index.html
@@ -15,6 +15,9 @@
         header img {
             margin: 0px;
         }
+        .gravatar img {
+            margin: 0px;
+        }
         header .nav-item {
             padding-left: 10px;
         }
@@ -24,7 +27,39 @@
         header .dropdown-menu {
             font-size: 14px;
         }
+        .subhead-heading {
+            font-size: 24px;
+            font-weight: normal;
+            -webkit-box-flex: 1;
+            flex: 1 1 auto;
+        }
+        .subhead-description {
+            font-size: 14px;
+            color: #586069;
+            -webkit-box-flex: 1;
+            flex: 1 100%;
+        }
+        .subhead {
+            border-bottom: 1px #e1e4e8 solid;
+        }
+        .new-repo-table {
+        }
+        .new-repo-table tr {
+            padding: 10px;
+        }
+        .new-repo-table th {
+            padding: 10px;
+        }
+        .new-repo-table a {
+            color: #000;
+        }
+        .new-repo-table a:hover {
+            color: #000;
+        }
+
     </style>
+    <link rel = "stylesheet" type = "text/css" href = "/public/css/octicons.css" />
+    <link rel ="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <body style="height: 100%;">
     <noscript>
