update project page

--- a/assets/elm-app/public/index.html
+++ b/assets/elm-app/public/index.html
@@ -12,18 +12,16 @@
             display: flex;
             align-items: center;
         }
-        header img {
-            margin: 0px;
-        }
-        .gravatar img {
-            margin: 0px;
-        }
         header .nav-item {
             padding-left: 10px;
         }
         header a {
             color: #fff;
         }
+        header a:hover {
+            color: #fff;
+        }
+
         header .dropdown-menu {
             font-size: 14px;
         }
@@ -57,6 +55,39 @@
             color: #000;
         }
 
+        .page-head {
+            position: relative;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            margin-bottom: 20px;
+            border-bottom: 1px solid #e1e4e8;
+        }
+
+        .project-head {
+            padding-bottom: 0;
+            background-color: #fafbfc;
+        }
+        .project-head-details-container {
+            margin-bottom: 20px;
+        }
+
+        .project-head h1 {
+            position: relative;
+            float: left;
+            max-width: 635px;
+            padding-left: 18px;
+            font-size: 18px;
+            line-height: 26px;
+            color: #586069;
+        }
+
+        .project-head h1 .octicon{
+            position: absolute;
+            top: 0;
+            left: 0;
+            margin-top: 5px;
+            color: #959da5;
+        }
     </style>
     <link rel = "stylesheet" type = "text/css" href = "/public/css/octicons.css" />
     <link rel ="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
